# tigl

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  ChangeLog  ChangeLog.md  README.md  TIGL.dsw  TIGL.sln  TIGL_vc10.sln  appveyor.yml  archives.html  authors.html  build-all-linux.sh  build-all-win32-vc2008.bat  build-all-win32-vc71.bat  categories.html  codecov.yml  copy_test.bat  cpacs-creator-pre-release.html  cpacs-creator-update-pre-release.html  embracing-new-technology-abandon-python-2-support-and-pre-c11-compilers.html  environment.yml  finishing-the-cpacs-3-wing-structure-implementation.html  hello-world.html  index.html  index2.html  introducing-ducts.html  parametric-modeling-of-engine-nacelles-and-pylons.html  pixi.toml  run_vs.bat  sitemap.xml  tags.html  tigl-300-rc2-released.html  tigl-300-released.html  (+9 more)
CPACSGen/: CMakeLists.txt
CPACSGen/input/: ParentPointer.txt  PruneList.txt  TypeSubstitution.txt
CPACSGen/schema/: cpacs_schema.xsd
CPACSGen/src/: CodeGen.cpp  CodeGen.h  CustomTypesTable.cpp  CustomTypesTable.h  FundamentalTypesTable.h  IOHelper.cpp  IOHelper.h  IndentingStreamWrapper.h  NotImplementedException.h  Optional.hpp  ParentPointerTable.h  ReservedNamesTable.h  SchemaParser.cpp  SchemaParser.h  Table.cpp  Table.h  Tables.cpp  Tables.h  TixiDocument.h  TixiHelper.cpp  TixiHelper.h  TypeSubstitutionTable.h  TypeSystem.cpp  TypeSystem.h  Variant.hpp  XsdTypesTable.h  codegen.cpp  codegen.h  main.cpp  optional.hpp  schemaparser.cpp  schemaparser.h
CPACSGen/tables/: CustomTypes.txt  FundamentalTypes.txt  ParentPointer.txt  TypeSubstitution.txt  XsdTypes.txt
TIGLViewer/: .cproject  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  TIGLViewer.vcproj  TIGLViewerLinux.pri  TIGLViewerWin32.pri  TIGLViewer_vc10.vcxproj  tiglviewer.pro
TIGLViewer/Common/: AISDialogs.cpp  AISDialogs.h  OCC_3dApp.h  OCC_3dBaseDoc.cpp  OCC_3dChildFrame.cpp  OCC_3dChildFrame.h  OCC_3dView.cpp  OCC_3dView.h  OCC_BaseDoc.cpp  OCC_BaseDoc.h  OCC_BaseView.cpp  OCC_BaseView.h  OCC_ChildFrame.cpp  OCC_ChildFrame.h  OCC_MainFrame.cpp
TIGLViewer/TIGLViewer/: ConfigurationDialog.cpp  ConfigurationDialog.h  FuselageDialog.cpp  FuselageDialog.h  FuselageProfileDialog.cpp  FuselageProfileDialog.h  FuselageUIDDialog.cpp  FuselageUIDDialog.h  ISession_Point.h  ISession_Text.cpp  ISession_Text.h  InputBox.cpp  InputBox.h  TIGLViewer.cpp  TIGLViewer.h  TIGLViewer.rc  TIGLViewer.vcproj  TIGLViewerChildFrame.cpp  TIGLViewerChildFrame.h  TIGLViewerDoc.cpp  TIGLViewerDoc.h  TIGLViewerView.cpp  TIGLViewerView.h  WingDialog.cpp  WingDialog.h  WingProfileDialog.cpp  WingProfileDialog.h  WingUIDDialog.cpp  WingUIDDialog.h  resource.h  stdafx.cpp  stdafx.h
TIGLViewer/gfx/: Readme.txt  TIGLViewer.icns
TIGLViewer/mfcsample/: StdAfx.cpp  mfcsample.vcproj
TIGLViewer/scripts/: globaldefs.js
TIGLViewer/shaders/: PhongShading-v6.fs  PhongShading-v7.6.fs  PhongShading-v7.fs  PhongShading.fs
TIGLViewer/src/: CHotsoseMeshReader.cpp  CHotsoseMeshReader.h  CPACSAbstractModel.cpp  CPACSAbstractModel.h  CPACSFilterModel.cpp  CPACSFilterModel.h  CPACSTree.cpp  CPACSTree.h  CPACSTreeItem.cpp  CPACSTreeItem.h  CPACSTreeView.cpp  CPACSTreeView.h  CPACSTreeWidget.cpp  CPACSTreeWidget.h  CPACSTreeWidget.ui  CTiglPointWidget.cpp  CTiglPointWidget.h  CommandLineParameters.cpp  CommandLineParameters.h  CreatorWidget.cpp  CreatorWidget.h  CreatorWidget.ui  EditorWidget.cpp  EditorWidget.h  EditorWidget.ui  ISession_Direction.cpp  ISession_Direction.h  ISession_Point.cpp  ISession_Point.h  ISession_Text.cpp  ISession_Text.h  ITIGLViewerSettingsChangedListener.h  ModificatorContainerWidget.cpp  ModificatorContainerWidget.h  ModificatorContainerWidget.ui  ModificatorElementWidget.cpp  ModificatorElementWidget.h  ModificatorElementWidget.ui  ModificatorFuselageWidget.cpp  ModificatorFuselageWidget.h  (+120 more)
TiglViewerExperiments/BasicGeometry/: BasicGeometry.cpp  CMakeLists.txt
TiglViewerExperiments/ReadVTK/: main.cpp  (+17 more)
bindings/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  README.txt
src/: CCPACSBorder.cpp  CCPACSBorder.h  CCPACSConfiguration.cpp  CCPACSConfiguration.h  CCPACSConfigurationManager.cpp  CCPACSConfigurationManager.h  CCPACSControlSurfaces.cpp  CCPACSControlSurfaces.h  CCPACSCurveParamPointMap.cpp  CCPACSCurveParamPointMap.h  CCPACSCurvePoint.cpp  CCPACSCurvePoint.h  CCPACSCurvePointListXYZ.cpp  CCPACSCurvePointListXYZ.h  CCPACSEtaIsoLine.cpp  CCPACSEtaIsoLine.h  CCPACSEtaXsiPoint.cpp  CCPACSEtaXsiPoint.h  CCPACSEtaXsiRelHeightPoint.cpp  CCPACSEtaXsiRelHeightPoint.h  CCPACSFarField.cpp  CCPACSFarField.h  CCPACSFuselage.cpp  CCPACSFuselage.h  CCPACSFuselageConnection.cpp  CCPACSFuselageConnection.h  CCPACSFuselagePositioning.cpp  CCPACSFuselagePositioning.h  CCPACSFuselagePositionings.cpp  CCPACSFuselagePositionings.h  CCPACSFuselageProfile.cpp  CCPACSFuselageProfile.h  CCPACSFuselageProfileGetPointAlgo.cpp  CCPACSFuselageProfileGetPointAlgo.h  CCPACSFuselageProfiles.cpp  CCPACSFuselageProfiles.h  CCPACSFuselageSection.cpp  CCPACSFuselageSection.h  CCPACSFuselageSectionElement.cpp  CCPACSFuselageSectionElement.h  (+224 more)
tests/: CMakeLists.txt  addTestFunctions.c  chebychevApproxTests.cpp  cpacsConfiguration.cpp  gcovr  guideCurvePatches.cpp  guideCurvePatchesMakeLoops.cpp  guideCurvePatchesMakePatches.cpp  main.cpp  pythonwrapper-tests.py  runtests.sh.in  test.h  testArcLengthReparameterization.cpp  testCurveNetwork.cpp  testLinearProjection.cpp  testUtils.cpp  test_logging.py  testperformance.cpp  tiglAlgorithm.cpp  tiglBSplines.cpp  tiglChoiceParsing.cpp  tiglCommonFunctions.cpp  tiglControlSurfaceBorder.cpp  tiglControlSurfaceDevice.cpp  tiglControlSurfaceTransformation.cpp  tiglExports.cpp  tiglExternalComponent.cpp  tiglFuselage.cpp  tiglFuselageGetPoint.cpp  tiglFuselageGuideCurves.cpp  tiglFuselageHelper.cpp  tiglFuselageSegment.cpp  tiglImport.cpp  tiglIntersectionCalculation.cpp  tiglMakeLoft.cpp  tiglMath.cpp  tiglOptimizer.cpp  tiglPointTranslator.cpp  tiglPolydata.cpp  tiglProfileBSplines.cpp  (+15 more)
(+12808 files in other folders)
